--- a/final project/survey.html
+++ b/final project/survey.html
@@ -2,6 +2,16 @@
 <html>
     <head>
             <title>My Favorite Places</title>
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139715537-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139715537-1');
+</script>
+
         <link href="finalproject.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     </head>
@@ -25,6 +35,7 @@
         </nav>
         <section>
            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXkCKHINLx-HzsJBOcT54eF-ddpdcXW6rZ0n-fmZ7col34SA/viewform?embedded=true" width="640" height="614" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		   
         </section>
         <footer>
         <p>&copy; 2019 P&amp;G. Copyright Anthony Donofrio.</p>
