--- a/final project/chicago.html
+++ b/final project/chicago.html
@@ -2,6 +2,16 @@
 <html>
     <head>
             <title>My Favorite Places</title>
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139715537-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139715537-1');
+</script>
+
         <link href="finalproject.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     </head>
