--- a/final project/phoenix.html
+++ b/final project/phoenix.html
@@ -2,6 +2,16 @@
 <html>
     <head>
             <title>My Favorite Places</title>
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139715537-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139715537-1');
+</script>
+
         <link href="finalproject.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     </head>
@@ -9,6 +19,8 @@
         <div id=wrap>
     </body>
 	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
+<div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
         <header>
             <img src="coverphoto.jpg"> 
@@ -33,7 +45,10 @@
 			the city. Their are also great restaurants around like Chompies and Cooperstown. They also have a lot great Mexican food around to, there are a lot of great taco trucks lining the streets.</p>
 			<p><img src="phoenix.jpg" class="bgpic"></p>
 			<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FPhoenix.Arizona.Guide%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-        </section>
+			<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2FPhoenix.Arizona.Guide%2F&layout=button_count&size=small&width=77&height=20&appId" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+		</section>
+	
+		
 		
         <footer>
         <p>&copy; 2019 P&amp;G. Copyright Anthony Donofrio.</p>
